k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meetthechef-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meetthechef
  template:
    metadata:
      labels:
        app: meetthechef
    spec:
      containers:
        - name: php
          image: revnfl/meetthechef:latest
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: chef-storage
              mountPath: /var/www/uploads
            - name: shared-code
              mountPath: /var/www/html

        # - name: nginx
        #   image: nginx:latest
        #   ports:
        #     - containerPort: 80
        #   volumeMounts:
        #     - name: shared-code
        #       mountPath: /var/www/html
        #     - name: nginx-config
        #       mountPath: /etc/nginx/conf.d/default.conf
        #       subPath: default.conf

      volumes:
        - name: chef-storage
          persistentVolumeClaim:
            claimName: chef-pvc
        - name: shared-code
          emptyDir: {}
        # - name: nginx-config
        #   configMap:
        #     name: nginx-conf
