k8s/chef-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: chef-nodeport-service
spec:
  type: NodePort
  selector:
    app: meetthechef
  ports:
    - port: 80
      targetPort: 80      # arahkan ke nginx container
      nodePort: 30080
      protocol: TCP
